assets/stylesheets/style.css
/* ... */
.home_address {
    gap: 1rem;
}

.home_information {
    display: flex;
    align-items: center;
    font-size: var(--small-font-size);
}

.home_icon {
    font-size: 1.2rem;
    display: flex;
    width: 25px;
    justify-content: center;
    margin-right: 0.75rem;
}

.home_link {
    display: inline-flex;
    align-items: center;
    font-size: var(--small-font-size);
    color: var(--text-color);
}

.home_link:hover {
    color: var(--title-color);
}

.home_button-movil {
    display: inline-block;
    border: 2px solid var(--text-color);
    color: var(--title-color);
    padding: 1rem 2rem;
    border-radius: .25rem;
    transition: all 0.5s ease;
    font-weight: var(--font-medium);
    margin-top: var(--margin-3);
}

.home_button-movil:hover {
    background-color: var(--text-color);
    color: var(--container-color);
}

/* Social page */

.social_container {
    grid-template-columns: max-content;
    gap: 1rem;
}

.social_link {
    display: inline-flex;
    align-items: center;
    font-size: var(--small-font-size);
    color: var(--text-color);
}

.social_link:hover {
    color: var(--title-color);
}

.social_icon {
    font-size: 1.2rem;
    display: flex;
    width: 25px;
    justify-content: center;
    margin-right: 0.75rem;
}

/* Profile page */

.profile_description {
    text-align: center;
}

/* Education page */

.education_content,
.experience_content,
.certificate_content {
    display: flex;
}

.education_time,
.experience_time,
.certificate_item {
    padding-right: 1rem;
}

.education_rounder,
.experience_rounder {
    position: relative;
    display: block;
    width: 16px;
    height: 16px;
    background-color: var(--text-color-light);
    border-radius: 50%;
    margin-top: .25rem;
}

body.dark-theme .education_rounder,
body.dark-theme .experience_rounder {
    background-color: var(--rounder-color-dark);
}

.education_line,
.experience_line {
    display: block;
    width: 2px;
    height: 115%;
    background-color: var(--text-color-light);
    transform: translate(7px, 0);
}


body.dark-theme .education_line,
body.dark-theme .experience_line {
    background-color: var(--line-color-dark);
}

.education_data,
.experience_data,
.certificate_data {
    gap: .35rem;
}

.education_title,
.experience_title,
.certificate_year {
    font-size: var(--h3-font-size);
}

.education_studies,
.experience_company,
.certificate_title {
    font-size: var(--small-font-size);
    color: var(--title-color);
}

.education_year,
.experience_year {
    font-size: var(--smaller-font-size);
}

.experience_description {
    color: var(--text-color-light);
    font-size: var(--smaller-font-size);
}

.experience_description br:not(:last-child) {
    margin-bottom: 0.9rem;
  }
  

body.dark-theme .experience_description {
    color: var(--experience-description-color); /* Ajoutez cette règle */
}

/* Skills */

.skills_content {
    gap: 0.2rem;
    padding-left: 2rem;
}

.skills_name {
    margin-bottom: .25rem;
}

.skills_text {
    display: inline-block;
    width: 100px;
}

.skills_box {
    display: inline-block;
    width: 150px;
    height: 10px;
    border-radius: 6px;
    overflow: hidden;
    background-color: var(--text-color-light);
}

.skills_progress {
    background-color: var(--text-color);
    display: block;
    height: 10px;
    border-radius: 6px;
}

/* Certificates */

.certificate_container {
    gap: 0.75rem;
}

.certificate_rounder {
    display: inline-block;
    width: 5px;
    height: 5px;
    background-color: var(--text-color-light);
    border-radius: 50%;
    margin-right: 0.38rem;
    margin-left: 0.37rem;
}

body.dark-theme .certificate_rounder {
    background-color: var(--certificate-rounder-color-dark);
}

.certificate_honours {
    font-size: var(--smaller-font-size);
    color: var(--text-color);
}

/* Languages */

.languages_content {
    gap: 0.2rem;
    padding-left: 2rem;
}

.languages_name {
    margin-bottom: .25rem;
}

.languages_text {
    display: inline-block;
    width: 100px;
}

.languages_stars {
    position: initial;
}

.languages_stars_checked {
    color: var(--text-color-light);
}

/* Interests */

.interests_container {
    grid-template-columns: repeat(2, 1fr);
    column-gap: 1rem;
    row-gap: 0.75rem;
    margin-top: var(--margin-2);
}

.interests_content {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    gap: 0.5rem;
}

.interests_icon {
    font-size: 1rem;
    color: var(--text-color-light);
    width: 1.25rem;
    text-align: center;
}


body.dark-theme .interests_icon {
    color: var(--interests-icon-color-dark);
}

.scrolltop {
    position: fixed;
    right: 1.2rem;
    bottom: -20%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0.4rem;
    background-color: var(--container-color-alt);
    border-radius: 0.25rem;
    z-index: var(--z-tooltip);
    transition: 0.4s;
    visibility: hidden;
}

.scrolltop_icon {
    font-size: 1.2rem;
    color: var(--text-color);
}

.show-scroll {
    visibility: visible;
    bottom: 5rem;
}

/* Screen for small phones  */

@media screen and (max-width: 320px) {
    .nav_list {
        grid-template-columns: repeat(2, 1fr);
        gap: 1rem 0.5rem;
    }
}
/* ... */

